--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,23 +1,85 @@
 ---
----
-<a href="/">Home</a>
-<a href="/about/">About</a>
-<a href="/blog/">Blog</a>
+import "../styles/global.css"; 
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 
+const pageTitle = "About Me";
+const identity = {
+    Nombre: "Pedro",
+    Apellido: "Garcia",
+    Edad: 20,
+    Correo: "pedro@gmail.com",
+    Telefono: "1234567890",
+    Direccion: "1234567890",
+}
+
+const skills = [
+    "HTML",
+    "CSS",
+    "JavaScript",
+    "React",
+    "Node.js",
+    "Express",
+]
+
+const happy = true;
+const finished = false;
+const goal = 3;
+
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase";
+
+const operatingSystem = "Linux";
+const quantity = 3;
+const footwear = "boots";
+const student = false;
+---
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} >
-    <title>Astro</title>
+    <title>{pageTitle}</title>
+
+    <style define:vars={{skillColor, fontWeight, textCase}}>
+        h1 {
+          color: purple;
+          font-size: 4rem;
+        }
+        .skill {
+            color: var(--skillColor);
+            font-weight: var(--fontWeight);
+            text-transform: var(--textCase);
+        }
+      </style>
+      
+    
   </head>
+
   <body>
-    <h1>About Me</h1>
-  <h2>... and my new Astro site!</h2>
+    <Header />
+    <h1>{pageTitle}</h1>
+    <h2>... and my new Astro site!</h2>
 
-  <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
+    <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
 
-  <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
-  </body>
+    <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
+    <p>Here are a few facts about me:</p>
+
+    <ul>
+       <li>My name is {identity.Nombre}.</li>
+        <li>I live in {identity.Direccion} and I work as a {identity.Telefono}.</li>
+    </ul>
+        <p>My skills are:</p>
+    <ul>
+        {skills.map((skill) => <li class="skill">{skill}</li>)}
+    </ul>
+
+    {happy && <p>I am happy to be learning Astro!</p>}
+
+    {finished && <p>I finished this tutorial!</p>}
+
+    {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
+    <Footer />
+</body>
 </html>
