Add Hamburger component and integrate into Header; create BaseLayout and MarkdownPostLayout; update styles and scripts

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -81,5 +81,6 @@ const student = false;
 
     {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
     <Footer />
+    <script src="../scripts/menu.js"></script>
 </body>
 </html>
